Encryptors + Compilers + TemplateLoader

--- a/core/config/config.ini
+++ b/core/config/config.ini
@@ -41,3 +41,7 @@ args = //####ARGS####
 delay = //####DELAY####
 find_process = //####FIND_PROCESS####
 shellcode_variable = encoded
+
+
+[DEBUG]
+encoders = False
