--- a/core/config/default.ini
+++ b/core/config/default.ini
@@ -32,7 +32,7 @@ template_file = core/templates/loaderTemplate/template.cpp
 shellcode = ####SHELLCODE####
 code = //####CODE####
 call = //####CALL####
-using = //####USING####
+include = //####INCLUDE####
 define = //####DEFINE####
 bypass = //####BYPASS####
 antidebug = //####ANTIDEBUG####
