--- a/core/config/config.ini
+++ b/core/config/config.ini
@@ -23,6 +23,7 @@ signtool_x64 =
 templates = core/templates
 methods = ${TEMPLATES}/methods
 encryptors = ${TEMPLATES}/encryptors
+sandboxevasion = ${TEMPLATES}/sandboxEvasion
 
 [FILES]
 template_file = core/templates/loaderTemplate/template.cpp
@@ -35,7 +36,7 @@ call = //####CALL####
 include = //####INCLUDE####
 define = //####DEFINE####
 bypass = //####BYPASS####
-antidebug = //####ANTIDEBUG####
+sandboxevasion = //####SANDBOXEVASION####
 unhook = //####UNHOOK####
 args = //####ARGS####
 delay = //####DELAY####
@@ -47,3 +48,4 @@ shellcode_variable = encoded
 encoders = False
 shellcode = True
 compiler = False
+sandboxevasion = False
