Started implementing SysCalls

--- a/core/config/config.ini
+++ b/core/config/config.ini
@@ -35,7 +35,7 @@ code = //####CODE####
 call = //####CALL####
 include = //####INCLUDE####
 define = //####DEFINE####
-bypass = //####BYPASS####
+syscall = //####SYSCALL####
 sandboxevasion = //####SANDBOXEVASION####
 unhook = //####UNHOOK####
 args = //####ARGS####
