--- a/core/config/default.ini
+++ b/core/config/default.ini
@@ -23,6 +23,7 @@ signtool_x64 =
 templates = core/templates
 methods = ${TEMPLATES}/methods
 encryptors = ${TEMPLATES}/encryptors
+sandboxevasion = ${TEMPLATES}/sandboxEvasion
 
 [FILES]
 template_file = core/templates/loaderTemplate/template.cpp
@@ -34,8 +35,8 @@ code = //####CODE####
 call = //####CALL####
 include = //####INCLUDE####
 define = //####DEFINE####
-bypass = //####BYPASS####
-antidebug = //####ANTIDEBUG####
+syscall = //####SYSCALL####
+sandboxevasion = //####SANDBOXEVASION####
 unhook = //####UNHOOK####
 args = //####ARGS####
 delay = //####DELAY####
