Edited components loading on TemplateLoader.py + Added direct syscall support

--- a/core/config/config.ini
+++ b/core/config/config.ini
@@ -24,6 +24,8 @@ templates = core/templates
 methods = ${TEMPLATES}/methods
 encryptors = ${TEMPLATES}/encryptors
 sandboxevasion = ${TEMPLATES}/sandboxEvasion
+loader_template = ${TEMPLATES}/loaderTemplate
+headers = ${TEMPLATES}/headers
 
 [FILES]
 template_file = core/templates/loaderTemplate/template.cpp
@@ -49,3 +51,4 @@ encoders = False
 shellcode = True
 compiler = False
 sandboxevasion = False
+syscalls = False
