--- a/core/config/default.ini
+++ b/core/config/default.ini
@@ -42,3 +42,11 @@ args = //####ARGS####
 delay = //####DELAY####
 find_process = //####FIND_PROCESS####
 shellcode_variable = encoded
+
+
+[DEBUG]
+encoders = False
+shellcode = False
+compiler = False
+sandboxevasion = False
+syscalls = False
