--- a/core/config/config.ini
+++ b/core/config/config.ini
@@ -48,7 +48,7 @@ shellcode_variable = encoded
 
 [DEBUG]
 encoders = False
-shellcode = True
+shellcode = False
 compiler = False
 sandboxevasion = False
-syscalls = False
+syscalls = True
