LLVM-Obf support

--- a/core/config/config.ini
+++ b/core/config/config.ini
@@ -48,7 +48,7 @@ shellcode_variable = encoded
 
 [DEBUG]
 encoders = False
-shellcode = True
-compiler = False
+shellcode = False
+compiler = True
 sandboxevasion = False
-syscalls = True
+syscalls = False
