Added Dotnet support

--- a/core/config/config.ini
+++ b/core/config/config.ini
@@ -33,6 +33,7 @@ template_file = core/templates/loaderTemplate/template.cpp
 
 [PLACEHOLDERS]
 shellcode = ####SHELLCODE####
+shellcode_len = ####SHELLCODE_LEN####
 code = //####CODE####
 call = //####CALL####
 include = //####INCLUDE####
