--- a/core/config/default.ini
+++ b/core/config/default.ini
@@ -31,6 +31,7 @@ template_file = core/templates/loaderTemplate/template.cpp
 
 [PLACEHOLDERS]
 shellcode = ####SHELLCODE####
+shellcode_len = ####SHELLCODE_LEN####
 code = //####CODE####
 call = //####CALL####
 include = //####INCLUDE####
