C# AES/RC4/XOR/NOP/b64 Support

--- a/core/config/config.ini
+++ b/core/config/config.ini
@@ -28,8 +28,8 @@ loader_template = ${TEMPLATES}/loaderTemplate
 headers = ${TEMPLATES}/headers
 
 [FILES]
-template_file = core/templates/loaderTemplate/template.cpp
-
+cpp_template_file = core/templates/loaderTemplate/template.cpp
+cs_template_file = core/templates/loaderTemplate/template.cs
 
 [PLACEHOLDERS]
 shellcode = ####SHELLCODE####
