--- a/core/config/default.ini
+++ b/core/config/default.ini
@@ -26,7 +26,8 @@ encryptors = ${TEMPLATES}/encryptors
 sandboxevasion = ${TEMPLATES}/sandboxEvasion
 
 [FILES]
-template_file = core/templates/loaderTemplate/template.cpp
+cpp_template_file = core/templates/loaderTemplate/template.cpp
+cs_template_file = core/templates/loaderTemplate/template.cs
 
 
 [PLACEHOLDERS]
