Basic Powershell support & Renamed SandboxEvasion to Evasion

--- a/core/config/config.ini
+++ b/core/config/config.ini
@@ -23,13 +23,14 @@ signtool_x64 =
 templates = core/templates
 methods = ${TEMPLATES}/methods
 encryptors = ${TEMPLATES}/encryptors
-sandboxevasion = ${TEMPLATES}/sandboxEvasion
+evasion = ${TEMPLATES}/evasions
 loader_template = ${TEMPLATES}/loaderTemplate
 headers = ${TEMPLATES}/headers
 
 [FILES]
 cpp_template_file = core/templates/loaderTemplate/template.cpp
 cs_template_file = core/templates/loaderTemplate/template.cs
+pwsh_template_file = core/templates/loaderTemplate/template.ps1
 
 [PLACEHOLDERS]
 shellcode = ####SHELLCODE####
@@ -39,7 +40,7 @@ call = //####CALL####
 include = //####INCLUDE####
 define = //####DEFINE####
 syscall = //####SYSCALL####
-sandboxevasion = //####SANDBOXEVASION####
+evasion = //####EVASION####
 unhook = //####UNHOOK####
 args = //####ARGS####
 delay = //####DELAY####
@@ -51,5 +52,5 @@ shellcode_variable = encoded
 encoders = False
 shellcode = False
 compiler = True
-sandboxevasion = False
+evasion = False
 syscalls = False
