--- a/core/config/default.ini
+++ b/core/config/default.ini
@@ -23,12 +23,14 @@ signtool_x64 =
 templates = core/templates
 methods = ${TEMPLATES}/methods
 encryptors = ${TEMPLATES}/encryptors
-sandboxevasion = ${TEMPLATES}/sandboxEvasion
+evasion = ${TEMPLATES}/evasions
+loader_template = ${TEMPLATES}/loaderTemplate
+headers = ${TEMPLATES}/headers
 
 [FILES]
 cpp_template_file = core/templates/loaderTemplate/template.cpp
 cs_template_file = core/templates/loaderTemplate/template.cs
-
+pwsh_template_file = core/templates/loaderTemplate/template.ps1
 
 [PLACEHOLDERS]
 shellcode = ####SHELLCODE####
@@ -38,7 +40,7 @@ call = //####CALL####
 include = //####INCLUDE####
 define = //####DEFINE####
 syscall = //####SYSCALL####
-sandboxevasion = //####SANDBOXEVASION####
+evasion = //####EVASION####
 unhook = //####UNHOOK####
 args = //####ARGS####
 delay = //####DELAY####
@@ -49,6 +51,6 @@ shellcode_variable = encoded
 [DEBUG]
 encoders = False
 shellcode = False
-compiler = False
-sandboxevasion = False
+compiler = True
+evasion = False
 syscalls = False
