Added VBA support

--- a/core/config/config.ini
+++ b/core/config/config.ini
@@ -31,6 +31,7 @@ headers = ${TEMPLATES}/headers
 cpp_template_file = core/templates/loaderTemplate/template.cpp
 cs_template_file = core/templates/loaderTemplate/template.cs
 pwsh_template_file = core/templates/loaderTemplate/template.ps1
+vba_template_file = core/templates/loaderTemplate/template.vba
 
 [PLACEHOLDERS]
 shellcode = ####SHELLCODE####
