--- a/core/config/default.ini
+++ b/core/config/default.ini
@@ -35,7 +35,9 @@ vba_template_file = core/templates/loaderTemplate/template.vba
 
 [PLACEHOLDERS]
 shellcode = ####SHELLCODE####
+shellcode32 = ####SHELLCODE32####
 shellcode_len = ####SHELLCODE_LEN####
+shellcode32_len = ####SHELLCODE32_LEN####
 code = //####CODE####
 call = //####CALL####
 include = //####INCLUDE####
