--- a/core/config/config.ini
+++ b/core/config/config.ini
@@ -44,6 +44,7 @@ include = //####INCLUDE####
 define = //####DEFINE####
 syscall = //####SYSCALL####
 evasion = //####EVASION####
+process = //####PROCESS####
 unhook = //####UNHOOK####
 args = //####ARGS####
 delay = //####DELAY####
