--- a/core/config/config.ini
+++ b/core/config/config.ini
@@ -58,3 +58,63 @@ shellcode = False
 compiler = True
 evasion = False
 syscalls = False
+
+[windows_cpp:DSys_CurrentThread]
+expected_format = RAW_BIN
+output_format = .exe
+
+[windows_cpp:exec]
+expected_format = RAW_BIN
+output_format = .exe
+
+[windows_cs:HalosGate]
+expected_format = RAW_BIN
+output_format = .exe
+
+[windows_cs:Venoma]
+expected_format = RAW_BIN
+output_format = .exe
+
+[windows_cs:DinvokeHollow]
+expected_format = RAW_BIN
+output_format = .exe
+
+[windows_cs:InstallUtil.dll]
+expected_format = RAW_BIN
+output_format = .dll
+
+[windows_cs:InstallUtilHollow]
+expected_format = RAW_BIN
+output_format = .exe
+
+[windows_cs:InstallUtilPwsh]
+expected_format = RAW_BIN
+output_format = .exe
+
+[windows_cs:NtMapViewOfSection]
+expected_format = RAW_BIN
+output_format = .exe
+
+[windows_js:VenomaToJs]
+expected_format = RAW_BIN
+output_format = .js
+
+[windows_pwsh:DelegateType]
+expected_format = RAW_BIN
+output_format = .ps1
+
+[windows_pwsh:exec]
+expected_format = RAW_BIN
+output_format = .ps1
+
+[windows_pwsh:PowerHollow]
+expected_format = RAW_BIN
+output_format = .ps1
+
+[windows_pwsh:PowerInject]
+expected_format = RAW_BIN
+output_format = .ps1
+
+[windows_pwsh:reflection]
+expected_format = DOTNET_BIN,DOTNET_DLL
+output_format = .ps1
