Added custom serpentine + vortex + rc4 + base64 algos

--- a/core/config/config.ini
+++ b/core/config/config.ini
@@ -56,7 +56,7 @@ shellcode_variable = encoded
 ; It's already defined using the output_format parameters
 
 [DEBUG]
-encoders = False
+encoders = True
 shellcode = False
 compiler = True
 evasion = False
