--- a/core/config/config.ini
+++ b/core/config/config.ini
@@ -50,15 +50,16 @@ unhook = //####UNHOOK####
 args = //####ARGS####
 delay = //####DELAY####
 find_process = //####FIND_PROCESS####
+shellcode_type = ####SHELLCODE_TYPE####
 shellcode_variable = encoded
 
 ; the compiler_argument should not define .DLL compilation options (e.g /target:library)
 ; It's already defined using the output_format parameters
 
 [DEBUG]
-encoders = True
+encoders = False
 shellcode = False
-compiler = True
+compiler = False
 evasion = False
 syscalls = False
 
