--- a/core/config/default.ini
+++ b/core/config/default.ini
@@ -51,6 +51,7 @@ args = //####ARGS####
 delay = //####DELAY####
 find_process = //####FIND_PROCESS####
 shellcode_variable = encoded
+shellcode_type = ####SHELLCODE_TYPE####
 
 ; the compiler_argument should not define .DLL compilation options (e.g /target:library)
 ; It's already defined using the output_format parameters
