Started Implementing Injection logic

--- a/core/config/config.ini
+++ b/core/config/config.ini
@@ -45,10 +45,11 @@ include = //####INCLUDE####
 define = //####DEFINE####
 syscall = //####SYSCALL####
 evasion = //####EVASION####
-process = //####PROCESS####
+process_x64 = //####PROCESS_X64####
 unhook = //####UNHOOK####
 args = //####ARGS####
 delay = //####DELAY####
+injection = //####INJECTION####
 find_process = //####FIND_PROCESS####
 shellcode_type = ####SHELLCODE_TYPE####
 shellcode_variable = encoded
