Improved Reflection template

--- a/core/config/config.ini
+++ b/core/config/config.ini
@@ -52,6 +52,9 @@ delay = //####DELAY####
 injection = //####INJECTION####
 find_process = //####FIND_PROCESS####
 shellcode_type = ####SHELLCODE_TYPE####
+class_name = ####CLASS_NAME####
+function_name = ####FUNCTION_NAME####
+entry_args = ####ENTRY_ARGS####
 shellcode_variable = encoded
 
 ; the compiler_argument should not define .DLL compilation options (e.g /target:library)
