Improved Injection Handeling

--- a/core/config/config.ini
+++ b/core/config/config.ini
@@ -44,7 +44,8 @@ include = //####INCLUDE####
 define = //####DEFINE####
 syscall = //####SYSCALL####
 evasion = //####EVASION####
-process_x64 = //####PROCESS_X64####
+inject_process = ####PROCESS####
+inject_process_path = ####PROCESS_PATH####
 unhook = //####UNHOOK####
 args = //####ARGS####
 delay = //####DELAY####
@@ -179,6 +180,7 @@ output_format = .vba
 [windows_vba:WmiCmd]
 expected_format = TEXT
 output_format = .vba
+custom_output = This template uses WMI dechaining, so still use x64 shellcode even if you are targeting x86 word!
 
 [windows_aspx:NtMapViewOfSection]
 expected_format = RAW_BIN
