Added evasion modules + worked on VBA

--- a/core/config/config.ini
+++ b/core/config/config.ini
@@ -161,11 +161,11 @@ output_format = .ps1
 expected_format = TEXT
 output_format = .ps1
 
-[windows_vba:Inject]
+[windows_vba:CreateRemoteThread]
 expected_format = RAW_BIN
 output_format = .vba
 
-[windows_vba:Runner]
+[windows_vba:CreateLocalThread]
 expected_format = RAW_BIN
 output_format = .vba
 
@@ -174,6 +174,18 @@ expected_format = TEXT
 output_format = .vba
 
 [windows_vba:Hollow]
+expected_format = RAW_BIN
+output_format = .vba
+
+[windows_vba:QueueUserAPC]
+expected_format = RAW_BIN
+output_format = .vba
+
+[windows_vba:EnumCallback]
+expected_format = RAW_BIN
+output_format = .vba
+
+[windows_vba:VectoredHandler]
 expected_format = RAW_BIN
 output_format = .vba
 
