DLL support for Windows C++

--- a/core/config/config.ini
+++ b/core/config/config.ini
@@ -79,6 +79,11 @@ output_format = .exe
 expected_format = RAW_BIN
 output_format = .exe
 
+[windows_cpp:CreateRemoteThread.dll]
+expected_format = RAW_BIN
+output_format = .dll
+custom_output = Run the dll using one of following commands: \nx86:\nC:\Windows\SysWOW64\msiexec.exe /y evil-sc.dll\nC:\Windows\SysWOW64\msiexec.exe /z evil-sc.dll\nC:\Windows\SysWOW64\regsvr32.exe /s /u evil-sc.dll\nC:\Windows\SysWOW64\regsvr32.exe /s evil-sc.dll\nC:\Windows\SysWOW64\rundll32.exe evil-sc.dll,EntryPoint\nx64:\nC:\Windows\System32\msiexec.exe /y evil-sc.dll\nC:\Windows\System32\msiexec.exe /z evil-sc.dll\nC:\Windows\System32\regsvr32.exe /s /u evil-sc.dll\nC:\Windows\System32\regsvr32.exe /s evil-sc.dll\nC:\Windows\System32\rundll32.exe evil-sc.dll,EntryPoint
+
 [windows_cs:HalosGate]
 expected_format = RAW_BIN
 output_format = .exe
@@ -153,7 +158,7 @@ compiler_args = -r:System.EnterpriseServices -r:core/templates/headers/System.Ma
 custom_output = Run the dll using one of following commands: \nx86:\nC:\Windows\Microsoft.NET\Framework\v4.0.30319\regsvcs.exe evil-sc.dll\nC:\Windows\Microsoft.NET\Framework\v4.0.30319\regasm.exe /U evil-sc.dll\nx64:\nC:\Windows\Microsoft.NET\Framework64\v4.0.30319\regsvcs.exe evil-sc.dll\nC:\Windows\Microsoft.NET\Framework64\v4.0.30319\regasm.exe /U evil-sc.dll
 
 
-[windows_cs:OdbconfRemoteThread.dll]
+[windows_cs:OdbcconfRemoteThread.dll]
 expected_format = RAW_BIN
 output_format = .dll
 compiler_args = -r:System.EnterpriseServices
