VBA Custom XML Part Support added

--- a/core/config/config.ini
+++ b/core/config/config.ini
@@ -58,7 +58,9 @@ function_name = ####FUNCTION_NAME####
 entry_args = ####ENTRY_ARGS####
 shellcode_variable = encoded
 strong_name_required = //####STRONG_NAME_REQUIRED####
-
+vba_auto_open = ####VBA_AUTO_OPEN####
+vba_file_open = ####VBA_FILE_OPEN####
+vba_required_custom_part = ####VBA_REQUIRED_CUSTOM_PART####
 
 ; the compiler_argument should not define .DLL compilation options (e.g /target:library)
 ; It's already defined using the output_format parameters
@@ -229,6 +231,11 @@ output_format = .vba
 expected_format = TEXT
 output_format = .vba
 custom_output = This template uses WMI dechaining, so still use x64 shellcode even if you are targeting x86 word!
+
+[windows_vba:DllExecDroper]
+expected_format = DOTNET_DLL,NATIVE_DLL
+output_format = .vba
+custom_output = This template uses a custom XML part to drop the shellcode.\nYou should import this XML file into your Office document.\nSee this link for more information: https://red.infiltr8.io/redteam/delivery/phishing/phishing-with-ms-office/ms-office-custom-xml-parts
 
 [windows_aspx:NtMapViewOfSection]
 expected_format = RAW_BIN
