--- a/core/config/config.ini
+++ b/core/config/config.ini
@@ -86,6 +86,11 @@ expected_format = RAW_BIN
 output_format = .dll
 custom_output = Run the dll using one of following commands: \nx86:\nC:\Windows\SysWOW64\msiexec.exe /y evil-sc.dll\nC:\Windows\SysWOW64\msiexec.exe /z evil-sc.dll\nC:\Windows\SysWOW64\regsvr32.exe /s /u evil-sc.dll\nC:\Windows\SysWOW64\regsvr32.exe /s evil-sc.dll\nC:\Windows\SysWOW64\rundll32.exe evil-sc.dll,EntryPoint\nx64:\nC:\Windows\System32\msiexec.exe /y evil-sc.dll\nC:\Windows\System32\msiexec.exe /z evil-sc.dll\nC:\Windows\System32\regsvr32.exe /s /u evil-sc.dll\nC:\Windows\System32\regsvr32.exe /s evil-sc.dll\nC:\Windows\System32\rundll32.exe evil-sc.dll,EntryPoint
 
+[windows_cpp:LocalQueueAPC.dll]
+expected_format = RAW_BIN
+output_format = .dll
+custom_output = Run the dll using one of following commands: \nx86:\nC:\Windows\SysWOW64\msiexec.exe /y evil-sc.dll\nC:\Windows\SysWOW64\msiexec.exe /z evil-sc.dll\nC:\Windows\SysWOW64\regsvr32.exe /s /u evil-sc.dll\nC:\Windows\SysWOW64\regsvr32.exe /s evil-sc.dll\nC:\Windows\SysWOW64\rundll32.exe evil-sc.dll,EntryPoint\nx64:\nC:\Windows\System32\msiexec.exe /y evil-sc.dll\nC:\Windows\System32\msiexec.exe /z evil-sc.dll\nC:\Windows\System32\regsvr32.exe /s /u evil-sc.dll\nC:\Windows\System32\regsvr32.exe /s evil-sc.dll\nC:\Windows\System32\rundll32.exe evil-sc.dll,EntryPoint
+
 [windows_cs:HalosGate]
 expected_format = RAW_BIN
 output_format = .exe
@@ -143,6 +148,11 @@ custom_output = After enabling CLR, Load the DLL in MSSQL as follows: \nCREATE A
 expected_format = TEXT
 output_format = .exe
 compiler_args = -r:core/templates/headers/System.Management.Automation.dll
+
+[windows_cs:htb]
+expected_format = RAW_BIN
+output_format = .exe
+compiler_args = -r:System.Configuration.Install -r:core/templates/headers/System.Management.Automation.dll
 
 [windows_cs:MockingJay]
 expected_format = RAW_BIN
@@ -234,7 +244,7 @@ output_format = .vba
 expected_format = RAW_BIN
 output_format = .vba
 
-[windows_vba:WmiCmd]
+[windows_vba:WmiExec]
 expected_format = TEXT
 output_format = .vba
 custom_output = This template uses WMI dechaining, so still use x64 shellcode even if you are targeting x86 word!
@@ -271,3 +281,9 @@ compiler_args = -z execstack
 expected_format = RAW_BIN
 output_format = .so
 compiler_args = -z execstack -Wall
+
+
+[windows_vbs:WmiExec]
+expected_format = TEXT
+output_format = .vbs
+custom_output = This template uses WMI dechaining, so still use x64 shellcode even if you are targeting x86 word!
