--- a/core/config/config.ini
+++ b/core/config/config.ini
@@ -68,7 +68,7 @@ vba_required_custom_part = ####VBA_REQUIRED_CUSTOM_PART####
 [DEBUG]
 encoders = False
 shellcode = False
-compiler = False
+compiler = True
 evasion = False
 syscalls = False
 
@@ -287,3 +287,11 @@ compiler_args = -z execstack -Wall
 expected_format = TEXT
 output_format = .vbs
 custom_output = This template uses WMI dechaining, so still use x64 shellcode even if you are targeting x86 word!
+
+[windows_vbs:CreateLocalThread]
+expected_format = RAW_BIN
+output_format = .vbs
+
+[windows_vbs:CreateRemoteThread]
+expected_format = RAW_BIN
+output_format = .vbs
